# emf4cpp

./: .gitignore  CMakeLists.txt
emf4cpp/: bootstrap.sh  ecore.cmake  ecore.cpp  ecore.hpp  ecore.pri  ecore_forward.hpp  ecorecpp.cmake
emf4cpp/cmake/: CMakeLists.txt  EMF4CPPConfig.cmake.in
emf4cpp/ecore/: EAnnotation.cpp  EAnnotation.hpp  EAnnotationImpl.cpp  EAttribute.cpp  EAttribute.hpp  EAttributeImpl.cpp  EClass.cpp  EClass.hpp  EClassImpl.cpp  EClassifier.cpp  EClassifier.hpp  EClassifierImpl.cpp  EDataType.cpp  EDataType.hpp  EDataTypeImpl.cpp  EEnum.cpp  EEnum.hpp  EEnumImpl.cpp  EEnumLiteral.cpp  EEnumLiteral.hpp  EEnumLiteralImpl.cpp  EFactory.cpp  EFactory.hpp  EFactoryImpl.cpp  EGenericType.cpp  EGenericType.hpp  EGenericTypeImpl.cpp  EModelElement.cpp  EModelElement.hpp  EModelElementImpl.cpp  ENamedElement.cpp  ENamedElement.hpp  ENamedElementImpl.cpp  EObject.cpp  EObject.hpp  EObjectImpl.cpp  EOperation.cpp  EOperation.hpp  EOperationImpl.cpp  EPackage.cpp  (+27 more)
emf4cpp/ecorecpp/: ItemProvider.cpp  ItemProvider.hpp  MetaModelRepository.cpp  MetaModelRepository.hpp  dllEcorecpp.hpp
emf4cpp/ecorecpp/mapping/: EListImpl.hpp  any.hpp
emf4cpp/ecorecpp/parser/: XMLHandler.cpp  handler.cpp  handler.hpp
emf4cpp/ecorecpp/resource/: Resource.cpp  Resource.hpp  ResourceSet.cpp  ResourceSet.hpp  URIConverter.cpp  URIConverter.hpp  URIHandler.cpp  URIHandler.hpp  XMLResource.cpp  XMLResource.hpp
emf4cpp/ecorecpp/serializer/: XMLSerializer.cpp
emf4cpp/ecorecpp/util/: Copier.cpp
org.csu.emf4cpp.generator/: CMakeLists.txt
org.csu.emf4cpp.generator/src/org/csu/emf4cpp/generator/: Generator.java
org.csu.emf4cpp.generator/src/template/: CMakeConfig.xpt  CMakeLists.xpt  Classes.ext  EClassCPP.xpt  EClassHPP.xpt  EClassImplCPP.xpt  EEnumHPP.xpt  EPackageHPP.xpt  FQN.ext  Factory.xpt  FactoryImpl.xpt  Keywords.ext  Main.xpt  Mapping.ext  PackageImpl.xpt  Packages.ext
